# CppLibExperiments

./: .gitignore  README.md
HackLibExample/: CMakeLists.txt
HackLibExample/include/: oxilli.h
HackLibExample/src/: oxilli.cpp
HeaderExample/: CMakeLists.txt
HeaderExample/src/: Hello.cpp
ManualExample1/: README.md  main.cpp  test.cpp  test.h
ManualExample2/: README.md  func.cpp  func.h  test.cpp
ManualExample3/: README.md  main.cpp  test.cpp  test.h
SharedLibraryExample/: CMakeLists.txt
SharedLibraryExample/src/: Hello.cpp  main.cpp
SimpleExample/: CMakeLists.txt  main.cpp
StaticLibraryExample/: CMakeLists.txt
StaticLibraryExample/src/: Hello.cpp
SubdirectoryExample/: CMakeLists.txt
SubdirectoryExample/model/: CMakeLists.txt
SubdirectoryExample/model/include/: Hello.h  oxilli.h
SubdirectoryExample/model/src/: Hello.cpp  oxilli.cpp
SubdirectoryExample/src/: main.cpp
